# super

./: .gitignore  .goreleaser.yaml  .linkspector.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  arena.go  arena_test.go  complex.go  complex_test.go  context.go  context_test.go  go.mod  go.sum  primitive.go  recordbuilder.go  spq_test.go  type.go  value.go  value_test.go  walk.go  zed_test.go
api/: api.go  mime.go
book/: .gitignore  Makefile  README.md  book.toml  super-playground.js
bsupbytes/: deserializer.go  serializer.go
cli/: cli.go
compiler/: compiler.go  package.go  reader.go
csup/: array.go  bsup.go  bytes.go  context.go  csup_test.go  dict.go  dynamic.go  encoder.go  field.go  float.go  fusion.go  header.go  int.go  map.go  metadata.go  named.go  nones.go  object.go  record.go  scode.go  segment.go  union.go  writer.go
db/: branch.go  pool.go  writer.go
fuzz/: fuzz.go
lake/: aggregate-ts.yaml  branch.go  pool.go  root.go  writer.go
man/: Makefile  README.md
mdtest/: mdtest.go  mdtest_test.go  test.go
order/: direction.go
python/superdb/: pyproject.toml  superdb.py  test_auth.py  test_superdb.py
runtime/: compiler.go
sbuf/: array.go  materialize.go  mux.go  scanner.go
scode/: builder.go  iter.go
service/: client_test.go  core.go  handlers.go  handlers_test.go  request.go
sio/: sup_test.go
sup/: analyzer.go  builder.go  formatter.go  lexer.go  marshal.go  marshal_bsup_test.go  marshal_test.go  parser-types.go  parser-values.go  parser.go  sup.go  sup_test.go
testdata/: minio.sh
vector/: apply.go  array.go  bool.go  (+32 more)
(+1305 files in other folders)
